changed in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello!!! aarti</h1>
+    <h1>Hello!!! aarti how are you?</h1>
 </body>
 </html>
